--- a/catalog/plugin/catalog-plugin-videothumbnail/pom.xml
+++ b/catalog/plugin/catalog-plugin-videothumbnail/pom.xml
@@ -66,6 +66,10 @@
             <type>zip</type>
             <classifier>bin</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
