--- a/libs/checksum/pom.xml
+++ b/libs/checksum/pom.xml
@@ -31,8 +31,7 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
-            <version>4.3.1</version>
+            <artifactId>osgi.cmpn</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
