--- a/platform/admin/configurator/admin-configurator-impl/pom.xml
+++ b/platform/admin/configurator/admin-configurator-impl/pom.xml
@@ -66,6 +66,10 @@
             <artifactId>org.apache.karaf.features.core</artifactId>
             <version>${karaf.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
