--- a/platform/error/platform-error-page-injector/pom.xml
+++ b/platform/error/platform-error-page-injector/pom.xml
@@ -27,7 +27,7 @@
     <dependencies>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
+            <artifactId>osgi.core</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
