--- a/platform/platform-paxweb-jettyconfig/pom.xml
+++ b/platform/platform-paxweb-jettyconfig/pom.xml
@@ -107,6 +107,15 @@
             <artifactId>http-filter-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.framework</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
