--- a/platform/security/command/security-command-listener/pom.xml
+++ b/platform/security/command/security-command-listener/pom.xml
@@ -26,13 +26,13 @@
     <dependencies>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
+            <artifactId>osgi.cmpn</artifactId>
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
+            <artifactId>osgi.core</artifactId>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
