--- a/platform/security/realm/security-realm-userpass/pom.xml
+++ b/platform/security/realm/security-realm-userpass/pom.xml
@@ -54,6 +54,10 @@
             <artifactId>platform-util</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
