--- a/catalog/core/catalog-core-definitionparser/pom.xml
+++ b/catalog/core/catalog-core-definitionparser/pom.xml
@@ -71,6 +71,10 @@
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
 
         <!-- test dependencies -->
         <dependency>
