--- a/catalog/core/catalog-core-eventcommands/pom.xml
+++ b/catalog/core/catalog-core-eventcommands/pom.xml
@@ -55,6 +55,10 @@
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
