--- a/catalog/core/catalog-core-impl/metacard-type-registry/pom.xml
+++ b/catalog/core/catalog-core-impl/metacard-type-registry/pom.xml
@@ -39,6 +39,10 @@
             <groupId>ddf.platform.util</groupId>
             <artifactId>platform-util</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
