--- a/catalog/core/catalog-core-impl/pubsub/pom.xml
+++ b/catalog/core/catalog-core-impl/pubsub/pom.xml
@@ -54,13 +54,13 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
+            <artifactId>osgi.cmpn</artifactId>
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
+            <artifactId>osgi.core</artifactId>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
