--- a/catalog/core/catalog-core-urlresourcereader/pom.xml
+++ b/catalog/core/catalog-core-urlresourcereader/pom.xml
@@ -56,11 +56,11 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
+            <artifactId>osgi.core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
+            <artifactId>osgi.cmpn</artifactId>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
