--- a/catalog/security/catalog-security-filter/pom.xml
+++ b/catalog/security/catalog-security-filter/pom.xml
@@ -58,6 +58,10 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
