--- a/catalog/spatial/geocoding/spatial-geocoding-endpoint/pom.xml
+++ b/catalog/spatial/geocoding/spatial-geocoding-endpoint/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>commons-text</artifactId>
             <version>${commons-text.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
