--- a/catalog/spatial/geocoding/spatial-geocoding-plugin/pom.xml
+++ b/catalog/spatial/geocoding/spatial-geocoding-plugin/pom.xml
@@ -45,6 +45,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
