--- a/catalog/spatial/kml/spatial-kml-transformer/pom.xml
+++ b/catalog/spatial/kml/spatial-kml-transformer/pom.xml
@@ -111,6 +111,10 @@
             <artifactId>jakarta.xml.bind-api</artifactId>
             <version>${jakarta.xml.bind.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
