--- a/catalog/spatial/wfs/spatial-wfs-metacardtype-registry/pom.xml
+++ b/catalog/spatial/wfs/spatial-wfs-metacardtype-registry/pom.xml
@@ -36,6 +36,10 @@
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <resources>
