--- a/catalog/transformer/catalog-transformer-bootflag/pom.xml
+++ b/catalog/transformer/catalog-transformer-bootflag/pom.xml
@@ -59,8 +59,7 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
-            <version>${osgi.version}</version>
+            <artifactId>osgi.core</artifactId>
         </dependency>
         <dependency>
             <groupId>ddf.platform</groupId>
