--- a/catalog/transformer/catalog-transformer-geojson-input/pom.xml
+++ b/catalog/transformer/catalog-transformer-geojson-input/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>jakarta.xml.bind-api</artifactId>
             <version>${jakarta.xml.bind.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
         <!-- Test dependencies -->
         <dependency>
             <groupId>ddf.catalog.core</groupId>
