--- a/catalog/transformer/catalog-transformer-service-xslt/pom.xml
+++ b/catalog/transformer/catalog-transformer-service-xslt/pom.xml
@@ -26,7 +26,7 @@
     <dependencies>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
+            <artifactId>osgi.core</artifactId>
         </dependency>
         <dependency>
             <groupId>ddf.catalog.core</groupId>
