--- a/catalog/ui/search-ui/simple/pom.xml
+++ b/catalog/ui/search-ui/simple/pom.xml
@@ -49,11 +49,11 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
+            <artifactId>osgi.core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
+            <artifactId>osgi.cmpn</artifactId>
         </dependency>
     </dependencies>
     <build>
