--- a/platform/mime/core/platform-mime-core-impl/pom.xml
+++ b/platform/mime/core/platform-mime-core-impl/pom.xml
@@ -43,11 +43,11 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
+            <artifactId>osgi.core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
+            <artifactId>osgi.cmpn</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
