--- a/platform/security/claims/security-claims-ldap/pom.xml
+++ b/platform/security/claims/security-claims-ldap/pom.xml
@@ -91,7 +91,7 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
+            <artifactId>osgi.core</artifactId>
         </dependency>
         <dependency>
             <groupId>ddf.security.core</groupId>
