--- a/platform/sync-installer/sync-installer-api/pom.xml
+++ b/platform/sync-installer/sync-installer-api/pom.xml
@@ -31,8 +31,7 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
-            <version>${osgi.version}</version>
+            <artifactId>osgi.cmpn</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
