--- a/platform/sync-installer/sync-installer-impl/pom.xml
+++ b/platform/sync-installer/sync-installer-impl/pom.xml
@@ -41,13 +41,11 @@
 
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
-            <version>${osgi.version}</version>
+            <artifactId>osgi.core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
-            <version>${osgi.version}</version>
+            <artifactId>osgi.cmpn</artifactId>
         </dependency>
 
         <dependency>
