--- a/pom.xml
+++ b/pom.xml
@@ -222,7 +222,7 @@
         <jboss-logging.version>3.3.1.Final</jboss-logging.version>
         <jcodec.version>0.2.0_1</jcodec.version>
         <jdom.bundle.version>1.1_4</jdom.bundle.version>
-        <jetty.version>9.4.28.v20200408</jetty.version>
+        <jetty.version>9.4.31.v20200723</jetty.version>
         <jgroups.version>3.6.13.Final</jgroups.version>
         <joda-convert.version>1.7</joda-convert.version>
         <jodah-failsafe.version>0.9.5</jodah-failsafe.version>
@@ -268,7 +268,7 @@
         <org.ops4j.pax.swissbox.version>1.8.2</org.ops4j.pax.swissbox.version>
         <org.rrd4j.version>3.3.1</org.rrd4j.version>
         <org.slf4j.version>1.7.29</org.slf4j.version>
-        <osgi.version>5.0.0</osgi.version>
+        <osgi.enterprise.version>5.0.0</osgi.enterprise.version>
         <owasp-html-sanitizer.version>20191001.1</owasp-html-sanitizer.version>
         <ows-v_1_0_0-schema.version>1.1.0</ows-v_1_0_0-schema.version>
         <ogc-filter-v_1_1_0-schema.thirdparty.version>1.1.0_5</ogc-filter-v_1_1_0-schema.thirdparty.version>
@@ -354,6 +354,13 @@
     <dependencyManagement>
         <dependencies>
             <!-- BEGIN: BOMs -->
+            <dependency>
+                <artifactId>karaf-bom</artifactId>
+                <groupId>org.apache.karaf</groupId>
+                <version>${karaf.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson</groupId>
                 <artifactId>jackson-bom</artifactId>
