--- a/catalog/spatial/kml/pom.xml
+++ b/catalog/spatial/kml/pom.xml
@@ -42,11 +42,10 @@
                 <artifactId>kml-v_2_2_0-schema</artifactId>
                 <version>1.1.0</version>
             </dependency>
-
             <dependency>
-                <groupId>de.micromata.jak</groupId>
-                <artifactId>JavaAPIforKml</artifactId>
-                <version>2.2.0</version>
+                <groupId>org.jvnet.jaxb2_commons</groupId>
+                <artifactId>jaxb2-basics-runtime</artifactId>
+                <version>0.11.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
