Match more deps to Karaf bom

--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -69,7 +69,7 @@
             <dependency>
                 <groupId>org.springframework.osgi</groupId>
                 <artifactId>spring-osgi-mock</artifactId>
-                <version>${spring-osgi.version}</version>
+                <version>${spring-osgi-mock.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -270,11 +270,6 @@
                 <version>${commons-beanutils.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-collections</groupId>
-                <artifactId>commons-collections</artifactId>
-                <version>${commons-collections.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-weaver-privilizer-api</artifactId>
                 <version>${commons-weaver-privilizer-api.version}</version>
@@ -283,11 +278,6 @@
                 <groupId>commons-digester</groupId>
                 <artifactId>commons-digester</artifactId>
                 <version>${commons-digester.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>commons-logging</groupId>
-                <artifactId>commons-logging</artifactId>
-                <version>${commons-logging.version}</version>
             </dependency>
             <dependency>
                 <groupId>cglib</groupId>
@@ -353,11 +343,6 @@
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpmime</artifactId>
                 <version>${httpmime.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>${commons-lang.version}</version>
             </dependency>
             <dependency>
                 <groupId>ddf.platform.solr</groupId>
