--- a/catalog/spatial/geocoding/spatial-geocoding-geocoder/pom.xml
+++ b/catalog/spatial/geocoding/spatial-geocoding-geocoder/pom.xml
@@ -67,6 +67,10 @@
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
