--- a/libs/httpproxy/proxy-camel-servlet/pom.xml
+++ b/libs/httpproxy/proxy-camel-servlet/pom.xml
@@ -54,6 +54,10 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-base</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
