--- a/catalog/solr/catalog-solr-solrclient/pom.xml
+++ b/catalog/solr/catalog-solr-solrclient/pom.xml
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.13.2</version>
+            <version>${solr.log4j.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
