--- a/features/admin/pom.xml
+++ b/features/admin/pom.xml
@@ -213,7 +213,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>${apache-log4j.version}</version>
+            <version>${solr.log4j.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
