--- a/catalog/core/catalog-core-standardframework/pom.xml
+++ b/catalog/core/catalog-core-standardframework/pom.xml
@@ -135,19 +135,6 @@
             <artifactId>jakarta.xml.bind-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.hazelcast</groupId>
-            <artifactId>hazelcast</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.hazelcast</groupId>
-            <artifactId>hazelcast</artifactId>
-            <type>jar</type>
-            <!-- Bug in dependency-plugin 3.0.2 requires using classifier for test-jars instead of type.
-                See: https://issues.apache.org/jira/browse/MDEP-587 -->
-            <classifier>tests</classifier>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api-impl</artifactId>
             <type>jar</type>
@@ -316,7 +303,6 @@
                         <Embed-Dependency>
                             activities,
                             catalog-core-actions,
-                            hazelcast;scope=runtime|compile,
                             notifications,
                             versioning-common,
                             catalog-core-api-impl;scope=!test
@@ -330,10 +316,7 @@
                             org.codice.ddf.catalog.resource.download.internal,
                             org.codice.ddf.catalog.sourcepoller
                         </Export-Package>
-                        <Import-Package>
-                            com.hazelcast.client;resolution:=optional,
-                            *
-                        </Import-Package>
+                        <Import-Package>*</Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
