--- a/catalog/transformer/catalog-transformer-common/src/main/resources/tika-additional-metadata-mapping.properties
+++ b/catalog/transformer/catalog-transformer-common/src/main/resources/tika-additional-metadata-mapping.properties
@@ -4,7 +4,7 @@ media.bits-per-sample=Bits Per Sample
 media.height-pixels=Image Height,Image Length
 media.width-pixels=Image Width
 media.compression=Compression
-media.duration=Duration
+media.duration=Duration,Media Duration
 ext.mp4.audio-sample-rate=Audio Sample Rate
 media.encoding=Encoding,Encoding Process,Video Codec,Encoder
 media.frame-rate=Frame Rate
