Initial Work for Docker Healthcheck
Moved catalog-docker-health-check to healthcheck

delete old catalog-docker-health-check directory

Updated pom

--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -393,6 +393,7 @@
         <module>spatial</module>
         <module>validator</module>
         <module>confluence</module>
+        <module>healthcheck</module>
     </modules>
     <build>
         <plugins>
