--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
@@ -75,13 +75,13 @@ solr.data.dir=_DO_NOT_EXPAND_${karaf.home}/data/solr
 
 # Solr Cloud Provider
 solr.client=CloudSolrClient
-solr.cloud.zookeeper=localhost:2181
+solr.cloud.zookeeper=zoo:2181
 
 # Solr HTTP Server Provider
 # solr.client=HttpSolrClient
 solr.http.port=8994
 solr.http.protocol=https
-solr.http.url=_DO_NOT_EXPAND_${solr.http.protocol}://_DO_NOT_EXPAND_${org.codice.ddf.system.hostname}:_DO_NOT_EXPAND_${solr.http.port}/solr
+solr.http.url=_DO_NOT_EXPAND_${solr.http.protocol}://solr1:_DO_NOT_EXPAND_${solr.http.port}/solr
 solr.password=admin
 solr.mem=2g
 solr.useBasicAuth=true
