Added readme for ddf-docker on setting it up locally, exposing debug port, as well as integrating with solrcloud image on local environment.

--- a/distribution/docker/ddf-docker/src/main/docker/Dockerfile
+++ b/distribution/docker/ddf-docker/src/main/docker/Dockerfile
@@ -24,3 +24,5 @@ COPY --from=prep /prep/ddf $APP_HOME
 VOLUME $APP_HOME/data $APP_HOME/deploy $APP_HOME/etc
 
 EXPOSE 8993 8181 8101
+
+HEALTHCHECK CMD curl --fail -u admin:admin -k https://localhost:8993/services/healthcheck/docker || exit 1
