--- a/catalog/healthcheck/pom.xml
+++ b/catalog/healthcheck/pom.xml
@@ -22,6 +22,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>docker-healthcheck-endpoint</artifactId>
+    <version>2.28.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <name>DDF :: Catalog :: Docker HealthCheck :: Endpoint</name>
 
