--- a/platform/security/core/security-core-services/pom.xml
+++ b/platform/security/core/security-core-services/pom.xml
@@ -205,6 +205,10 @@
             <groupId>ddf.security.handler</groupId>
             <artifactId>security-handler-impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
