--- a/distribution/test/itests/test-itests-ddf-core/pom.xml
+++ b/distribution/test/itests/test-itests-ddf-core/pom.xml
@@ -37,7 +37,12 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.karaf</groupId>
+            <artifactId>karaf</artifactId>
+            <version>${karaf.version}</version>
+            <type>pom</type>
+        </dependency>
         <dependency>
             <groupId>org.codice.ddf</groupId>
             <artifactId>kernel</artifactId>
