--- a/features/pom.xml
+++ b/features/pom.xml
@@ -69,12 +69,12 @@
         <!-- please maintain alphabetical order here -->
         <cxf.abdera.osgi.version>${abdera.osgi.version}</cxf.abdera.osgi.version>
         <cxf.abdera.version>${abdera.version}</cxf.abdera.version>
-        <cxf.activemq.version>5.16.0</cxf.activemq.version>
-        <cxf.ahc.version>2.12.1</cxf.ahc.version>
+        <cxf.activemq.version>5.16.1</cxf.activemq.version>
+        <cxf.ahc.version>2.12.2</cxf.ahc.version>
         <cxf.atmosphere.version>2.6.1</cxf.atmosphere.version>
-        <cxf.brave.reporter.version>2.15.4</cxf.brave.reporter.version>
-        <cxf.brave.version>5.13.0</cxf.brave.version>
-        <cxf.brave.zipkin.version>2.22.1</cxf.brave.zipkin.version>
+        <cxf.brave.reporter.version>2.16.2</cxf.brave.reporter.version>
+        <cxf.brave.version>5.13.2</cxf.brave.version>
+        <cxf.brave.zipkin.version>2.23.0</cxf.brave.zipkin.version>
         <cxf.classgraph.version>4.8.25</cxf.classgraph.version>
         <cxf.classmate.version>1.5.1</cxf.classmate.version>
         <cxf.commons-codec.version>${commons-codec-version}</cxf.commons-codec.version>
@@ -91,29 +91,29 @@
         <!-- CXF Guava version must match DDF Guava version to avoid OSGi uses constraint violations -->
         <cxf.guava.version>${guava.version}</cxf.guava.version>
         <cxf.hazelcast.version>${hazelcast.version}</cxf.hazelcast.version>
-        <cxf.hibernate.validator.version>6.1.4.Final</cxf.hibernate.validator.version>
+        <cxf.hibernate.validator.version>6.1.7.Final</cxf.hibernate.validator.version>
         <cxf.httpcomponents.asyncclient.version>4.1.4</cxf.httpcomponents.asyncclient.version>
-        <cxf.httpcomponents.client.version>4.5.12</cxf.httpcomponents.client.version>
+        <cxf.httpcomponents.client.version>4.5.13</cxf.httpcomponents.client.version>
         <cxf.httpcomponents.core.version>${httpcore.version}</cxf.httpcomponents.core.version>
-        <cxf.jackson.databind.version>2.11.2</cxf.jackson.databind.version>
-        <cxf.jackson.version>2.11.2</cxf.jackson.version>
+        <cxf.jackson.version>2.11.4</cxf.jackson.version>
+        <cxf.jackson.databind.version>2.11.4</cxf.jackson.databind.version>
         <!-- Using jakarta.activation 1.2.1 instead of 1.2.2, as it requires Java 9.
              See https://github.com/eclipse-ee4j/jaf/issues/37 -->
         <cxf.jakarta.activation.version>${jakarta.activation.version}</cxf.jakarta.activation.version>
         <cxf.james.mim4j.version>0.7.2</cxf.james.mim4j.version>
-        <cxf.javassist.version>3.25.0-GA</cxf.javassist.version>
+        <cxf.javassist.version>3.27.0-GA</cxf.javassist.version>
         <cxf.javax.annotation-api.version>${javax.annotation-api.version}</cxf.javax.annotation-api.version>
         <cxf.jboss.logging.version>3.3.0.Final</cxf.jboss.logging.version>
         <cxf.jettison.version>1.4.1</cxf.jettison.version>
         <cxf.joda.time.version>${joda-time.version}</cxf.joda.time.version>
-        <cxf.johnzon.version>1.2.8</cxf.johnzon.version>
+        <cxf.johnzon.version>1.2.11</cxf.johnzon.version>
         <cxf.mina.version>2.1.3</cxf.mina.version>
         <cxf.neethi.version>3.1.1</cxf.neethi.version>
-        <cxf.netty.version>4.1.50.Final</cxf.netty.version>
+        <cxf.netty.version>4.1.65.Final</cxf.netty.version>
         <cxf.opensaml.osgi.version>${opensaml.osgi.version}</cxf.opensaml.osgi.version>
         <cxf.opentracing.version>0.33.0</cxf.opentracing.version>
         <cxf.reactivestreams.version>1.0.3</cxf.reactivestreams.version>
-        <!-- Using saaj-impl 1.3.28 instead of 1.5.2, as it requires packages saaj-api 1.4+
+        <!-- Using saaj-impl 1.3.28 instead of 1.5.3, as it requires packages saaj-api 1.4+
              which isn't provided by Karaf (as of 4.2.9). We could add the newer saaj-api, but
              using the older saaj-impl seems to work fine -->
         <cxf.saaj-impl.version>1.3.28_1</cxf.saaj-impl.version>
@@ -123,14 +123,16 @@
         <cxf.snakeyaml.version>1.26</cxf.snakeyaml.version>
         <cxf.specs.jaxws.api.version>2.3_2</cxf.specs.jaxws.api.version>
         <cxf.stax-ex.version>1.8.3</cxf.stax-ex.version>
-        <cxf.swagger.v3.version>2.1.4</cxf.swagger.v3.version>
+        <cxf.swagger.v3.version>2.1.6</cxf.swagger.v3.version>
         <cxf.swagger2.version>1.6.2</cxf.swagger2.version>
         <cxf.swagger2.guava.version>27.0-jre</cxf.swagger2.guava.version>
         <cxf.validation.api.version>2.0.2</cxf.validation.api.version>
-        <cxf.velocity.version>2.2</cxf.velocity.version>
+        <cxf.velocity.version>2.3</cxf.velocity.version>
         <cxf.woodstox.core.version>${woodstox.core.version}</cxf.woodstox.core.version>
         <cxf.woodstox.stax2-api.version>${woodstox.stax2-api.version}</cxf.woodstox.stax2-api.version>
         <cxf.wss4j.version>${wss4j.version}</cxf.wss4j.version>
+        <cxf.jaxb.runtime.version>2.3.4</cxf.jaxb.runtime.version>
+        <cxf.jaxb.xjc.version>${cxf.jaxb.runtime.version}</cxf.jaxb.xjc.version>
         <cxf.xjc-utils.version>3.3.1</cxf.xjc-utils.version>
         <cxf.xmlschema.version>2.2.5</cxf.xmlschema.version>
 
@@ -228,8 +230,6 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <!--Using version 2.17 instead of the latest (2.19.1) because everything after 2.17 has-->
-                    <!--problems connecting to the container or running the tests-->
                     <configuration>
                         <argLine>-Djava.awt.headless=true -noverify</argLine>
                     </configuration>
