Upgrade Micrometer and Prometheus Client
- Micrometer 1.8.0
- Prometheus Client 0.12.0
- Added Opentelemetry API bundle for Prometheus Client

--- a/platform/metrics/pom.xml
+++ b/platform/metrics/pom.xml
@@ -26,6 +26,7 @@
     <modules>
         <module>micrometer-bundle</module>
         <module>micrometer-prometheus-bundle</module>
+        <module>opentelemetry-api-bundle</module>
         <module>metrics-prometheus-endpoint</module>
         <module>metrics-system-reporter</module>
         <module>metrics-servlet-filter</module>
