--- a/features/utilities/pom.xml
+++ b/features/utilities/pom.xml
@@ -174,6 +174,11 @@
         </dependency>
         <dependency>
             <groupId>org.codice.ddf.metrics</groupId>
+            <artifactId>opentelemetry-api-bundle</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codice.ddf.metrics</groupId>
             <artifactId>metrics-prometheus-endpoint</artifactId>
             <version>${project.version}</version>
         </dependency>
