--- a/pom.xml
+++ b/pom.xml
@@ -316,10 +316,11 @@
         <xmlsec.version>2.2.0</xmlsec.version>
         <xpp3.bundle.version>1.1.4c_6</xpp3.bundle.version>
         <xstream.version>1.4.18</xstream.version>
-        <micrometer.version>1.5.1</micrometer.version>
+        <micrometer.version>1.8.0</micrometer.version>
         <micrometer.hdrhistogram.version>2.1.12</micrometer.hdrhistogram.version>
         <micrometer.latencyutils.version>2.0.3</micrometer.latencyutils.version>
-        <micrometer.prometheus-client.version>0.8.1</micrometer.prometheus-client.version>
+        <micrometer.prometheus-client.version>0.12.0</micrometer.prometheus-client.version>
+        <micrometer.opentelemetry.version>1.9.1</micrometer.opentelemetry.version>
         <zstd-jni.version>1.4.9-1</zstd-jni.version>
 
         <!-- Command line argument properties for the maven-surefire-plugin -->
