Upgrade to Karaf 4.3.4
- Upgrades Karaf, Pax Logging, and Log4j

--- a/catalog/rest/catalog-rest-endpoint/src/test/resources/custom.properties
+++ b/catalog/rest/catalog-rest-endpoint/src/test/resources/custom.properties
@@ -1,4 +1,5 @@
 org.osgi.framework.system.packages.extra = \
+    sun.misc, \
     javax.activation;version=${jakarta.activation.version}, \
     javax.annotation;version=${javax.annotation-api.version}, \
     javax.annotation.security;version=${javax.annotation-api.version}, \
@@ -6,5 +7,8 @@ org.osgi.framework.system.packages.extra = \
     javax.annotation;version=${jsr305.version}, \
     javax.annotation.concurrent;version=${jsr305.version}, \
     javax.annotation.meta;version=${jsr305.version}
+
+org.osgi.framework.bootdelegation = \
+    sun.*
 
 pax.exam.invoker = junit
