--- a/distribution/ddf-common/src/main/resources-filtered/etc/startup.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/startup.properties
@@ -5,13 +5,13 @@ mvn\:ddf.platform.osgi/platform-osgi-conditions/${project.version}=2
 mvn\:org.apache.felix/org.apache.felix.metatype/${felix.metatype.version}=5
 mvn\:org.apache.karaf.services/org.apache.karaf.services.eventadmin/${karaf.version}=5
 mvn\:org.ops4j.pax.url/pax-url-aether/${pax.url.version}=5
-mvn\:org.fusesource.jansi/jansi/1.18 = 8
+mvn\:org.fusesource.jansi/jansi/${jansi.version} = 8
 mvn\:org.ops4j.pax.logging/pax-logging-api/${pax.logging.version}=8
 mvn\:org.ops4j.pax.logging/pax-logging-log4j2/${pax.logging.version}=8
 mvn\:org.apache.felix/org.apache.felix.coordinator/${felix.coordinator.version} = 9
-mvn\:org.osgi/org.osgi.util.promise/1.1.1 = 9
+mvn\:org.osgi/org.osgi.util.promise/${org.osgi.util.promise.version} = 9
 mvn\:org.apache.felix/org.apache.felix.converter/1.0.14 = 9
-mvn\:org.osgi/org.osgi.util.function/1.1.0 = 9
+mvn\:org.osgi/org.osgi.util.function/${org.osgi.util.function.version} = 9
 # These two osgi bundles need to start before configadmin in order to register
 # DDF's custom PersistenceManager.
 mvn\:ddf.platform.osgi/platform-osgi-internal-api/${project.version}=9
