--- a/catalog/solr/catalog-solr-commands/pom.xml
+++ b/catalog/solr/catalog-solr-commands/pom.xml
@@ -148,7 +148,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>${solr.log4j.version}</version>
+            <version>${apache-log4j.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
