--- a/pom.xml
+++ b/pom.xml
@@ -122,10 +122,10 @@
         <jsonassert.version>1.5.0</jsonassert.version>
         <spock.version>2.0-M4-groovy-3.0</spock.version>
         <mockito.version>3.6.28</mockito.version>
-        <pax.exam.version>4.13.4</pax.exam.version>
-        <pax.logging.version>2.0.10</pax.logging.version>
-        <pax.url.version>2.6.7</pax.url.version>
-        <pax.web.version>7.3.19</pax.web.version>
+        <pax.exam.version>4.13.5</pax.exam.version>
+        <pax.logging.version>2.0.13</pax.logging.version>
+        <pax.url.version>2.6.10</pax.url.version>
+        <pax.web.version>7.3.23</pax.web.version>
         <restito.version>0.9.4</restito.version>
         <restassured.version>3.3.0</restassured.version>
         <groovy.version>3.0.7</groovy.version>
@@ -186,9 +186,9 @@
         <equinox.version>3.16.300</equinox.version>
         <felix.configadmin.version>1.9.22</felix.configadmin.version>
         <felix.coordinator.version>1.0.2</felix.coordinator.version>
-        <felix.fileinstall.version>3.7.0</felix.fileinstall.version>
+        <felix.fileinstall.version>3.7.2</felix.fileinstall.version>
         <felix.metatype.version>1.2.4</felix.metatype.version>
-        <felix.scr.version>2.1.28</felix.scr.version>
+        <felix.scr.version>2.1.30</felix.scr.version>
         <geronimo-servlet-api.artifact>geronimo-servlet_3.0_spec</geronimo-servlet-api.artifact>
         <geronimo-servlet-api.group>org.apache.geronimo.specs</geronimo-servlet-api.group>
         <google-http-client.version>1.22.0</google-http-client.version>
@@ -236,9 +236,12 @@
         <jts.spatial4j.version>1.16.0</jts.spatial4j.version>
         <jvnet-ogc.version>2.6.1</jvnet-ogc.version>
         <jwnl.version>1.3.3</jwnl.version>
-        <karaf.version>4.3.3</karaf.version>
+        <karaf.version>4.3.5</karaf.version>
+        <jansi.version>2.4.0</jansi.version>
+        <org.osgi.util.promise.version>1.2.0</org.osgi.util.promise.version>
+        <org.osgi.util.function.version>1.2.0</org.osgi.util.function.version>
         <la4j.version>0.6.0</la4j.version>
-        <apache-log4j.version>2.11.2</apache-log4j.version>
+        <apache-log4j.version>2.17.0</apache-log4j.version>
         <logback.classic.version>1.2.3</logback.classic.version>
         <logback.version>1.2.3</logback.version>
         <lucene.version>8.7.0</lucene.version>
@@ -262,7 +265,7 @@
         <org.geotools.bundle.version>${org.geotools.version}_2</org.geotools.bundle.version>
         <org.geotools.version>20.1</org.geotools.version>
         <!-- Note: The swissbox version needs to match the version used by pax-exam . -->
-        <org.ops4j.pax.swissbox.version>1.8.4</org.ops4j.pax.swissbox.version>
+        <org.ops4j.pax.swissbox.version>1.8.5</org.ops4j.pax.swissbox.version>
         <org.rrd4j.version>3.3.1</org.rrd4j.version>
         <org.slf4j.version>1.7.29</org.slf4j.version>
         <osgi.enterprise.version>5.0.0</osgi.enterprise.version>
@@ -292,12 +295,11 @@
         <solr.httpclient.version>4.5.12</solr.httpclient.version>
         <solr.httpcore.version>4.4.13</solr.httpcore.version>
         <solr.httpmime.version>4.5.12</solr.httpmime.version>
-        <solr.log4j.version>2.13.2</solr.log4j.version>
         <solr.zookeeper.version>3.6.2</solr.zookeeper.version>
         <solr.spatial4j.version>0.7</solr.spatial4j.version>
         <spark.version>2.9.2</spark.version>
         <spatial4j.version>0.7</spatial4j.version>
-        <spring.version>5.2.13.RELEASE</spring.version>
+        <spring.version>5.3.13</spring.version>
         <spring-osgi-mock.version>1.2.1</spring-osgi-mock.version>
         <tika.thirdparty.bundle.version>1.26.0_1</tika.thirdparty.bundle.version>
         <tika.version>1.27</tika.version>
