--- a/catalog/solr/catalog-solr-offline-gazetteer/pom.xml
+++ b/catalog/solr/catalog-solr-offline-gazetteer/pom.xml
@@ -96,6 +96,7 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-nop</artifactId>
         <scope>test</scope>
+        <version>${org.slf4j.version}</version>
       </dependency>
     </dependencies>
 
