--- a/platform/osgi/platform-osgi-condpermadmin/pom.xml
+++ b/platform/osgi/platform-osgi-condpermadmin/pom.xml
@@ -23,6 +23,9 @@
     <artifactId>platform-osgi-condpermadmin</artifactId>
     <groupId>ddf.platform.osgi</groupId>
     <name>DDF :: Platform :: OSGi :: CondPermAdmin</name>
+    <properties>
+        <equinox.version>3.13.300</equinox.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -65,6 +68,7 @@
             <groupId>org.eclipse.platform</groupId>
             <artifactId>org.eclipse.osgi</artifactId>
             <scope>test</scope>
+            <version>${equinox.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
