--- a/platform/security/platform-security-core-api/pom.xml
+++ b/platform/security/platform-security-core-api/pom.xml
@@ -26,7 +26,8 @@
 
     <properties>
         <!-- Override Log4J because pax-logging-api 1.10.1 uses 2.8.2 -->
-        <apache-log4j.version>2.8.2</apache-log4j.version>
+        <!--apache-log4j.version>2.8.2</apache-log4j.version-->
+        <apache-log4j.version>2.17.1</apache-log4j.version>
     </properties>
 
     <dependencies>
@@ -152,6 +153,7 @@
             <groupId>org.ops4j.pax.logging</groupId>
             <artifactId>pax-logging-api</artifactId>
             <scope>provided</scope>
+            <version>${pax.logging.version}</version>
         </dependency>
         <dependency>
             <groupId>org.codice.ddf</groupId>
