--- a/pom.xml
+++ b/pom.xml
@@ -131,14 +131,14 @@
         <hamcrest-junit.version>2.0.0.0</hamcrest-junit.version>
         <hamcrest-optional.version>1.0</hamcrest-optional.version>
         <jsonassert.version>1.5.0</jsonassert.version>
-        <junit.version>4.12</junit.version>
+        <junit.version>4.13.2</junit.version>
         <mockito-core.version>2.8.47</mockito-core.version>
         <mockito-all.version>1.10.19</mockito-all.version>
         <pax.exam.version>4.13.2.CODICE</pax.exam.version>
-        <pax.logging.version>1.11.6</pax.logging.version>
-        <pax.transx.version>0.4.1</pax.transx.version>
-        <pax.url.version>2.6.2</pax.url.version>
-        <pax.web.version>7.2.16</pax.web.version>
+        <pax.logging.version>1.11.13</pax.logging.version>
+        <pax.transx.version>0.5.0</pax.transx.version>
+        <pax.url.version>2.6.7</pax.url.version>
+        <pax.web.version>7.2.29</pax.web.version>
         <restito.version>0.8.2</restito.version>
         <xmlunit.version>1.4</xmlunit.version>
         <xmlunit-matchers.version>2.5.1</xmlunit-matchers.version>
@@ -159,18 +159,21 @@
         <abdera.version>1.1.3</abdera.version>
         <antlr.version>4.3</antlr.version>
         <apache.shiro.version>1.4.0</apache.shiro.version>
-        <asm.version>3.3.1</asm.version>
+        <aries.jmx.api.version>1.1.5</aries.jmx.api.version>
+        <aries.jmx.core.version>1.1.8</aries.jmx.core.version>
+        <aries.util.version>1.1.3</aries.util.version>
+        <asm.version>9.2</asm.version>
         <awaitility.version>3.1.5</awaitility.version>
         <aws-java-sdk-bundle.version>1.11.344_1</aws-java-sdk-bundle.version>
-        <bouncy.version>1.61</bouncy.version>
+        <bouncy.version>1.69</bouncy.version>
         <cal10n.version>0.8.1</cal10n.version>
         <cal10n.thirdparty.bundle.version>${cal10n.version}_1</cal10n.thirdparty.bundle.version>
         <camel.version>2.24.2</camel.version>
         <cesium.version>1.34</cesium.version>
-        <common-compress.version>1.18</common-compress.version>
+        <common-compress.version>1.21</common-compress.version>
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
-        <commons-codec.version>1.14</commons-codec.version>
+        <commons-codec.version>1.15</commons-codec.version>
         <commons-collections.version>3.2.2</commons-collections.version>
         <commons-collections4.version>4.1</commons-collections4.version>
         <commons-configuration.version>1.10</commons-configuration.version>
@@ -178,9 +181,9 @@
         <commons-csv.version>1.4</commons-csv.version>
         <commons-digester.version>1.8.1</commons-digester.version>
         <commons-exec.version>1.3</commons-exec.version>
-        <commons-io.version>2.6</commons-io.version>
+        <commons-io.version>2.11.0</commons-io.version>
         <commons-lang.version>2.6</commons-lang.version>
-        <commons-lang3.version>3.8.1</commons-lang3.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-logging.version>1.2</commons-logging.version>
         <commons-math3.version>3.6.1</commons-math3.version>
         <commons-net.version>3.5</commons-net.version>
@@ -189,17 +192,18 @@
         <commons-validator.version>1.6</commons-validator.version>
         <components-font-awesome.version>4.7.0</components-font-awesome.version>
         <countryconverter.version>0.1.9</countryconverter.version>
-        <cxf.version>3.2.9</cxf.version>
+        <cxf.version>3.4.3</cxf.version>
         <decanter.version>1.3.0</decanter.version>
         <dropwizard.version>3.2.6</dropwizard.version>
-        <equinox.version>3.13.0</equinox.version>
+        <equinox.version>3.13.300</equinox.version>
         <fabric8.version>3.0.12</fabric8.version>
-        <felix.configadmin.version>1.9.16</felix.configadmin.version>
+        <felix.configadmin.version>1.9.22</felix.configadmin.version>
         <felix.coordinator.version>1.0.2</felix.coordinator.version>
-        <felix.fileinstall.version>3.6.6</felix.fileinstall.version>
-        <felix.metatype.version>1.2.2</felix.metatype.version>
+        <felix.fileinstall.version>3.7.4</felix.fileinstall.version>
+        <felix.metatype.version>1.2.4</felix.metatype.version>
         <felix.framework.version>5.6.12</felix.framework.version>
-        <felix.scr.version>2.0.14</felix.scr.version>
+        <felix.scr.version>2.1.30</felix.scr.version>
+        <felix.utils.version>1.11.8</felix.utils.version>
         <ftpserver-version>1.0.6</ftpserver-version>
         <geotools.version>19.1</geotools.version>
         <geronimo-jms_2_spec.version>1.0-alpha-2</geronimo-jms_2_spec.version>
@@ -212,13 +216,14 @@
         <guava.platform>jre</guava.platform>
         <guava.version>${guava.version-number}-${guava.platform}</guava.version>
         <hawtbuff.version>1.11</hawtbuff.version>
-        <httpclient.version>4.5.6</httpclient.version>
+        <httpclient.version>4.5.13</httpclient.version>
         <httpcore.version>4.4.10</httpcore.version>
         <httpmime.version>${httpclient.version}</httpmime.version>
         <jackson2-version>2.9.8</jackson2-version>
         <jai-imageio-core.version>1.3.1</jai-imageio-core.version>
         <JavaAPIforKml.version>2.2.1_CODICE_1</JavaAPIforKml.version>
-        <jackson.version>2.11.0</jackson.version>
+        <jackson.version>2.12.5</jackson.version>
+        <jansi.version>1.18</jansi.version>
         <jasypt.version>1.9.3</jasypt.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <javax.cache.version>1.1.1</javax.cache.version>
@@ -234,7 +239,7 @@
         <jcodec.version>0.2.0_1</jcodec.version>
         <jdom.bundle.version>1.1_4</jdom.bundle.version>
         <jetty.solr.version>9.4.34.v20201102</jetty.solr.version>
-        <jetty.version>9.4.28.v20200408</jetty.version>
+        <jetty.version>9.4.43.v20210629</jetty.version>
         <jgroups.version>3.6.13.Final</jgroups.version>
         <joda-convert.version>1.7</joda-convert.version>
         <jodah-failsafe.version>0.9.5</jodah-failsafe.version>
@@ -251,7 +256,7 @@
         <jts.version>1.14.0</jts.version>
         <jvnet-ogc.version>2.6.1</jvnet-ogc.version>
         <jwnl.version>1.3.3</jwnl.version>
-        <karaf.version>4.2.9</karaf.version>
+        <karaf.version>4.2.14</karaf.version>
         <la4j.version>0.6.0</la4j.version>
         <log4j.version>1.2.17</log4j.version>
         <apache-log4j.version>2.11.2</apache-log4j.version>
@@ -279,7 +284,7 @@
         <org.geotools.bundle.version>${org.geotools.version}_2</org.geotools.bundle.version>
         <org.geotools.version>19.1</org.geotools.version>
         <!-- Note: The swissbox version needs to match the version used by pax-exam . -->
-        <org.ops4j.pax.swissbox.version>1.8.2</org.ops4j.pax.swissbox.version>
+        <org.ops4j.pax.swissbox.version>1.8.4</org.ops4j.pax.swissbox.version>
         <org.rrd4j.version>3.3.1</org.rrd4j.version>
         <org.slf4j.version>1.7.29</org.slf4j.version>
         <osgi.version>5.0.0</osgi.version>
@@ -310,7 +315,7 @@
 
         <spark.version>2.5.5</spark.version>
         <spatial4j.version>0.7</spatial4j.version>
-        <spring.version>5.2.5.RELEASE</spring.version>
+        <spring.version>5.3.9</spring.version>
         <spring-osgi.version>1.2.1</spring-osgi.version>
         <tika.thirdparty.bundle.version>1.18.0_5</tika.thirdparty.bundle.version>
         <tika.version>1.18</tika.version>
@@ -399,6 +404,66 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.fileinstall</artifactId>
+                <version>${felix.fileinstall.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.osgi</groupId>
+                        <artifactId>org.osgi.core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.osgi</groupId>
+                        <artifactId>org.osgi.compendium</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.utils</artifactId>
+                <version>${felix.utils.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.osgi</groupId>
+                        <artifactId>org.osgi.core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.osgi</groupId>
+                        <artifactId>org.osgi.compendium</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.karaf.system</groupId>
+                <artifactId>org.apache.karaf.system.core</artifactId>
+                <version>${karaf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.fusesource.jansi</groupId>
+                <artifactId>jansi</artifactId>
+                <version>${jansi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.aries.jmx</groupId>
+                <artifactId>org.apache.aries.jmx.api</artifactId>
+                <version>${aries.jmx.api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.aries</groupId>
+                <artifactId>org.apache.aries.util</artifactId>
+                <version>${aries.util.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.aries.jmx</groupId>
+                <artifactId>org.apache.aries.jmx.core</artifactId>
+                <version>${aries.jmx.core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${org.slf4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
